compiler-tests/src/test/data/diagnostic/inject/member/MemberInjectedShowsInjectFunctionInTrace.ir.diag.txt
/MemberInjectedShowsInjectFunctionInTrace.kt:9:16: error: 
[Metro/MissingBinding] No binding found for Dependency

  FeatureScreen -> Dependency

  trace (in FeatureGraph):
      Dependency is injected at FeatureScreen.dependency
      FeatureScreen is injected at FeatureGraph.inject()

  help: ensure Dependency has an @Inject constructor or is provided by an @Provides or @Binds
        declaration visible to FeatureGraph
  docs: https://zacsweers.github.io/metro/latest/diagnostics/#missingbinding

